# Manipulator-Coursework

./: .gitignore  CMakeLists.txt  README.md
include/: Simulator.h
resources/: Main.ttt
src/: Simulation.cpp  Simulator.cpp  main.cpp
